# NukeCGDenoiser

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md  build.sh  conf.py  denoiser.cpp  denoiser.h  index.rst  menu.py
.devcontainer/linux/: Dockerfile
.devcontainer/macos-arm/: Dockerfile  devcontainer.json
.devcontainer/macos-x86/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
cmake/Modules/: FindNuke.cmake  FindOpenImageDenoise.cmake  FindOptiX.cmake
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  linux_build_plugin.sh  linux_install_nuke.sh  macos_build_plugin.sh  macos_install_nuke.sh  menu.py  windows_build_plugin.ps1  windows_install_nuke.ps1
src/: CMakeLists.txt  denoiser.cpp  denoiser.h
